# VyvoTTS

./: CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  FINETUNE_JAPANESE.md  SETUP_WINDOWS.md
notebook/: vyvotts-lfm2-train.ipynb  vyvotts-qwen3-train.ipynb
scripts/: convert_jsut_to_hf.py  convert_moe_to_hf.py  inference_test.py  test_japanese_inference.py  test_japanese_qwen3.py  tokenize_jsut_direct.py  tokenize_local_dataset.py  tokenize_moe_direct.py  tokenize_moe_qwen3.py  train_japanese.py  train_japanese_qwen3.py
tests/: __init__.py  test_japanese_preprocessing.py
vyvotts/: audio_tokenizer.py
vyvotts/configs/inference/: lfm2_accent.yaml  lfm2_accent_v4.yaml
vyvotts/inference/: transformers_hqq_inference.py  transformers_inference.py  vllm_inference.py
vyvotts/train/pretrain/: train.py
vyvotts/utils/: japanese_preprocessing.py
